[COMMON] Submodules updated as per local folder names

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "Draw-Messenger-v2-Frontend"]
+[submodule "client-draw"]
 	path = client-draw
 	url = https://github.com/Mayank-MP05/Draw-Messenger-v2-Frontend.git
-[submodule "Draw-Messenger-v2-Backend"]
+[submodule "server-draw"]
 	path = server-draw
 	url = https://github.com/Mayank-MP05/Draw-Messenger-v2-Backend.git
